# cste_math

./: .appveyor.yml  .travis.yml  404.html  CMakeLists.txt  LICENSE  README.md  cste_math.h  cste_math_single.h  functions.h  index.html  mkdocs.yml  stdlib.h
.circleci/: config.yml
calc/: exponential.h  modulo.h  power.h
cste_math/: cste_math_single.h  functions.h
cste_math/calc/: square_root.h
cste_math/rounding/: round.h  round_down.h  round_up.h
cste_math/trigonometry/: sine.h
cste_math/trigonometry/bound/: sine_pi4.h
docs/: index.md
include/cste_math/: config.h  constants.h  cste_math.h  factorial.h  floor.h  functions.h  stdlib.h
include/cste_math/calc/: exp.h  exponential.h  modulo.h  natural_logarithm.h  pow.h  power.h  sqrt.h  square_root.h
include/cste_math/internal/: bignum_int.h
include/cste_math/misc/: decompose_real.h  inf_nan.h  sign.h
include/cste_math/rounding/: absolute.h  ceil.h  floor.h  fractional.h  round.h  round_down.h  round_up.h  truncate.h
include/cste_math/trigonometry/: cosine.h  sine.h
include/cste_math/trigonometry/bound/: cosine_pi4.h  sine_pi4.h
include/vecpp/cste_math/: config.h  constants.h  cste_math.h  functions.h  functions_rt.h
include/vecpp/cste_math/calc/: exponential.h  square_root.h
include/vecpp/cste_math/misc/: sign.h
include/vecpp/cste_math/rounding/: round.h  round_down.h
include/vecpp/cste_math/trigonometry/: cosine.h  sine.h
include/vecpp/cste_math/trigonometry/bound/: cosine_pi4.h  sine_pi4.h
misc/: inf_nan.h  sign.h
rounding/: absolute.h  fractional.h  round.h  round_down.h  round_up.h  truncate.h
search/: search_index.json
tests/: CMakeLists.txt  catch.hpp
tests/calc/: exp.cpp  exponential.cpp
tests/misc/: decompose_real.cpp
tests/rounding/: ceil.cpp  floor.cpp  round_down.cpp  round_up.cpp
tests/trigonometry/: cosine.cpp  sine.cpp
trigonometry/: tangent.h
trigonometry/bound/: cosine_pi4.h  sine_pi4.h
